fix the column alignment

--- a/main.css
+++ b/main.css
@@ -106,7 +106,7 @@ p {
 
 .left {
     text-align: left;
-    font-weight: 500;
+    font-weight: 400;
     white-space: normal;
 }
 
